<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="#F0020D20">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trivia"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.05"
            style="@style/main_tv_style" />

        <TextView
            android:id="@+id/tv_outof"
            style="@style/main_tv_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/question_number"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_title"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintVertical_bias="0.017" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_questions"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="#5910202C"
            android:elevation="32dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_outof">

            <TextView
                android:id="@+id/tv_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="textview"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_margin="16dp" />

        </com.google.android.material.card.MaterialCardView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="4dp"
            android:backgroundTint="@color/purple_500"
            android:text="@string/btn_text_true"
            android:textSize="20sp"
            android:textColor="@color/teal_700"
            app:layout_constraintEnd_toEndOf="@id/cv_questions"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/cv_questions"
            app:layout_constraintTop_toBottomOf="@id/cv_questions" />

        <Button
            android:id="@+id/btn_false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_text_false"
            android:textSize="20sp"
            android:textColor="@color/teal_700"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@id/cv_questions"
            app:layout_constraintStart_toStartOf="@id/cv_questions"
            app:layout_constraintTop_toBottomOf="@id/btn_true"
            android:layout_marginHorizontal="16dp" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/btn_false"
            app:layout_constraintEnd_toEndOf="@id/btn_false"
            android:text="@string/btn_text_next"
            android:textColor="@color/teal_700"
            android:textStyle="bold" />


        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#142532"
            app:cardCornerRadius="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.95"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.022"
            app:strokeColor="#0C151C"
            app:strokeWidth="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="4dp">

                    <TextView
                        android:id="@+id/tv_high_score_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/highest_score"
                        android:textColor="@color/teal_200" />
                    <TextView
                        android:id="@+id/tv_highest_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/initial_highest_score"
                        android:layout_marginStart="8dp"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="4dp">

                    <TextView
                        android:id="@+id/tv_your_score_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/your_score"
                        android:textColor="@color/teal_200" />

                    <TextView
                        android:id="@+id/tv_your_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/your_initial_score"
                        android:layout_marginStart="8dp"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        />

                </LinearLayout>

            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>